Fix loader z-index

--- a/css/loader.css
+++ b/css/loader.css
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(220, 220, 200, 0.5);
+  z-index: 50;
 }
 
 .lds-ring {
